aptosid-art-legacy (2015.01.8) unstable; urgency=medium

  * drop */theme-kde/aptosid-*.colors.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 20 Jul 2015 23:07:04 +0200

aptosid-art-legacy (2015.01.7) unstable; urgency=medium

  * drop actual kdm themes and pull in sddm and their corresponding sddm themes
    instead.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 20 Jul 2015 22:46:03 +0200

aptosid-art-legacy (2015.01.6) unstable; urgency=medium

  * s/kde-workspace-bin/plasma-workspace/.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 12 Jul 2015 01:33:57 +0200

aptosid-art-legacy (2015.01.5) unstable; urgency=medium

  * drop kdm themes as mandatory artwork package for KDE based flavours.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 04 Jul 2015 03:18:37 +0200

aptosid-art-legacy (2015.01.4) unstable; urgency=medium

  * clean up transparency a bit more.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Jul 2015 23:35:59 +0200

aptosid-art-legacy (2015.01.3) unstable; urgency=medium

  * fix preview generation for sddm themes.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Jul 2015 23:20:19 +0200

aptosid-art-legacy (2015.01.2) unstable; urgency=medium

  * add aptosid-art-sddm-@CODENAME_SAFE@ as a hard dependency to
    aptosid-art-kde-theme, in addition to kdm for the time being (it's rather
    small).
  * demote hard dependencies on kde-workspace-bin or xfce4-session to
    recommends.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Jul 2015 02:18:47 +0200

aptosid-art-legacy (2015.01.1) unstable; urgency=medium

  * add sddm themes based on upstream's sddm-themes-maldives for aptosid.
  * remove individual COPYRIGHT files for each release artwork,
    debian/copyright covers this.
  * only recommend kdm/ sddm from their theme packages.
  * add imagemagick to build-depends.
  * fix up local.make for keres/splash-kde, inkscape now actually reports
    errors for non-existing files, rather than skipping them silently.